--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,15 +8,15 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">APITesting</th></tr>
-<tr><td><a href="#t0">TekarchAppTesting</a></td><td class="num">5</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">29,423</td><td></td><td></td></tr>
+<tr><th colspan="8">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">5</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">24,580</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">APITesting</th></tr></tbody><tbody id="t0"><tr><th colspan="4">TekarchAppTesting &#8212; passed</th></tr><tr class="passedeven"><td rowspan="5">com.restapi.tests.TekarchAppTest</td><td><a href="#m0">addUser</a></td><td rowspan="1">1645155923618</td><td rowspan="1">12891</td></tr><tr class="passedeven"><td><a href="#m1">deleteUser</a></td><td rowspan="1">1645155936513</td><td rowspan="1">233</td></tr><tr class="passedeven"><td><a href="#m2">getAllUser</a></td><td rowspan="1">1645155936748</td><td rowspan="1">6540</td></tr><tr class="passedeven"><td><a href="#m3">login</a></td><td rowspan="1">1645155943290</td><td rowspan="1">208</td></tr><tr class="passedeven"><td><a href="#m4">updateUser</a></td><td rowspan="1">1645155943499</td><td rowspan="1">9026</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="5">com.restapi.tests.TekarchAppTest_EndToEnd</td><td><a href="#m0">getAllUser</a></td><td rowspan="1">1645218254324</td><td rowspan="1">6161</td></tr><tr class="passedeven"><td><a href="#m1">login</a></td><td rowspan="1">1645218260489</td><td rowspan="1">257</td></tr><tr class="passedeven"><td><a href="#m2">testAddUser</a></td><td rowspan="1">1645218260747</td><td rowspan="1">8194</td></tr><tr class="passedeven"><td><a href="#m3">testDeleteUser</a></td><td rowspan="1">1645218268944</td><td rowspan="1">2282</td></tr><tr class="passedeven"><td><a href="#m4">testUpdateUser</a></td><td rowspan="1">1645218271228</td><td rowspan="1">7343</td></tr></tbody>
 </table>
-<h2>TekarchAppTesting</h2><h3 id="m0">com.restapi.tests.TekarchAppTest#addUser</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.restapi.tests.TekarchAppTest#deleteUser</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.restapi.tests.TekarchAppTest#getAllUser</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">com.restapi.tests.TekarchAppTest#login</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">com.restapi.tests.TekarchAppTest#updateUser</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">com.restapi.tests.TekarchAppTest_EndToEnd#getAllUser</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.restapi.tests.TekarchAppTest_EndToEnd#login</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">com.restapi.tests.TekarchAppTest_EndToEnd#testAddUser</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">com.restapi.tests.TekarchAppTest_EndToEnd#testDeleteUser</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">com.restapi.tests.TekarchAppTest_EndToEnd#testUpdateUser</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
