--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,16 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="afc369">  <td>22/02/17 19:42:31</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TekarchAppTest.updateUser()[pri:1, instance:com.restapi.tests.TekarchAppTest@7d3a22a9]">updateUser</td> 
-  <td>main@154482552</td>   <td></td> </tr>
-<tr bgcolor="929362">  <td>22/02/17 19:42:12</td>   <td>-18429</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp()[pri:0, instance:com.restapi.tests.TekarchAppTest@7d3a22a9]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@154482552</td>   <td></td> </tr>
-<tr bgcolor="afc369">  <td>22/02/17 19:42:25</td>   <td>-5757</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TekarchAppTest.getAllUser()[pri:0, instance:com.restapi.tests.TekarchAppTest@7d3a22a9]">getAllUser</td> 
-  <td>main@154482552</td>   <td></td> </tr>
-<tr bgcolor="afc369">  <td>22/02/17 19:42:30</td>   <td>-224</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TekarchAppTest.login()[pri:0, instance:com.restapi.tests.TekarchAppTest@7d3a22a9]">login</td> 
-  <td>main@154482552</td>   <td></td> </tr>
-<tr bgcolor="afc369">  <td>22/02/17 19:42:13</td>   <td>-17943</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TekarchAppTest.addUser()[pri:0, instance:com.restapi.tests.TekarchAppTest@7d3a22a9]">addUser</td> 
-  <td>main@154482552</td>   <td></td> </tr>
-<tr bgcolor="afc369">  <td>22/02/17 19:42:22</td>   <td>-8400</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TekarchAppTest.deleteUser()[pri:0, instance:com.restapi.tests.TekarchAppTest@7d3a22a9]">deleteUser</td> 
-  <td>main@154482552</td>   <td></td> </tr>
+<tr bgcolor="947870">  <td>22/02/18 13:04:28</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TekarchAppTest_EndToEnd.testDeleteUser()[pri:0, instance:com.restapi.tests.TekarchAppTest_EndToEnd@2a556333]">testDeleteUser</td> 
+  <td>main@1896294051</td>   <td></td> </tr>
+<tr bgcolor="85bdee">  <td>22/02/18 13:04:14</td>   <td>-14930</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp()[pri:0, instance:com.restapi.tests.TekarchAppTest_EndToEnd@2a556333]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1896294051</td>   <td></td> </tr>
+<tr bgcolor="947870">  <td>22/02/18 13:04:20</td>   <td>-8455</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TekarchAppTest_EndToEnd.login()[pri:0, instance:com.restapi.tests.TekarchAppTest_EndToEnd@2a556333]">login</td> 
+  <td>main@1896294051</td>   <td></td> </tr>
+<tr bgcolor="947870">  <td>22/02/18 13:04:31</td>   <td>2284</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TekarchAppTest_EndToEnd.testUpdateUser()[pri:1, instance:com.restapi.tests.TekarchAppTest_EndToEnd@2a556333]">testUpdateUser</td> 
+  <td>main@1896294051</td>   <td></td> </tr>
+<tr bgcolor="947870">  <td>22/02/18 13:04:14</td>   <td>-14620</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TekarchAppTest_EndToEnd.getAllUser()[pri:0, instance:com.restapi.tests.TekarchAppTest_EndToEnd@2a556333]">getAllUser</td> 
+  <td>main@1896294051</td>   <td></td> </tr>
+<tr bgcolor="947870">  <td>22/02/18 13:04:20</td>   <td>-8197</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TekarchAppTest_EndToEnd.testAddUser()[pri:0, instance:com.restapi.tests.TekarchAppTest_EndToEnd@2a556333]">testAddUser</td> 
+  <td>main@1896294051</td>   <td></td> </tr>
 </table>
