adding CRUD operation test

--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -15,11 +15,11 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>testUpdateUser</td>
+<td>testGetAllUser</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>getAllUser</td>
+<td>testUpdateUser</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
