--- a/test-output/index.html
+++ b/test-output/index.html
@@ -104,11 +104,6 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.restapi.tests.TekarchAppTest_EndToEnd" hash-for-method="getAllUser">getAllUser</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.restapi.tests.TekarchAppTest_EndToEnd" hash-for-method="login">login</a> <!-- method navigator-link -->
                       </span>
                       <br/>
@@ -120,6 +115,11 @@
                       <span>
                         <img width="3%" src="passed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.restapi.tests.TekarchAppTest_EndToEnd" hash-for-method="testDeleteUser">testDeleteUser</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.restapi.tests.TekarchAppTest_EndToEnd" hash-for-method="testGetAllUser">testGetAllUser</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -147,13 +147,6 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="getAllUser">
-                  </a> <!-- getAllUser -->
-                  <span class="method-name">getAllUser</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
                   <a name="login">
                   </a> <!-- login -->
                   <span class="method-name">login</span>
@@ -175,6 +168,13 @@
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
+                  <a name="testGetAllUser">
+                  </a> <!-- testGetAllUser -->
+                  <span class="method-name">testGetAllUser</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
                   <a name="testUpdateUser">
                   </a> <!-- testUpdateUser -->
                   <span class="method-name">testUpdateUser</span>
@@ -185,7 +185,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/private/var/folders/_8/hjpgfp5n7j1c05ngvh0ntht80000gn/T/testng-eclipse-462160299/testng-customsuite.xml</span>
+            <span class="header-content">/private/var/folders/_8/hjpgfp5n7j1c05ngvh0ntht80000gn/T/testng-eclipse-501987529/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -238,28 +238,28 @@ data.addRows(5);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'testAddUser')
 data.setCell(0, 2, 'com.restapi.tests.TekarchAppTest_EndToEnd')
-data.setCell(0, 3, 8194);
+data.setCell(0, 3, 13133);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'testUpdateUser')
 data.setCell(1, 2, 'com.restapi.tests.TekarchAppTest_EndToEnd')
-data.setCell(1, 3, 7343);
+data.setCell(1, 3, 8424);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'getAllUser')
+data.setCell(2, 1, 'testGetAllUser')
 data.setCell(2, 2, 'com.restapi.tests.TekarchAppTest_EndToEnd')
-data.setCell(2, 3, 6161);
+data.setCell(2, 3, 5941);
 data.setCell(3, 0, 3)
 data.setCell(3, 1, 'testDeleteUser')
 data.setCell(3, 2, 'com.restapi.tests.TekarchAppTest_EndToEnd')
-data.setCell(3, 3, 2282);
+data.setCell(3, 3, 2262);
 data.setCell(4, 0, 4)
 data.setCell(4, 1, 'login')
 data.setCell(4, 2, 'com.restapi.tests.TekarchAppTest_EndToEnd')
-data.setCell(4, 3, 257);
+data.setCell(4, 3, 2182);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 24 seconds</span>
+              <span class="suite-total-time">Total running time: 31 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -291,24 +291,24 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">getAllUser</span>
-                <span class="method-start">314 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
                 <span class="method-name">login</span>
-                <span class="method-start">6479 ms</span>
+                <span class="method-start">340 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">testAddUser</span>
-                <span class="method-start">6737 ms</span>
+                <span class="method-start">2526 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">testDeleteUser</span>
-                <span class="method-start">14934 ms</span>
+                <span class="method-start">15662 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">testGetAllUser</span>
+                <span class="method-start">17925 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">testUpdateUser</span>
-                <span class="method-start">17218 ms</span>
+                <span class="method-start">23867 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
