--- a/test-output/index.html
+++ b/test-output/index.html
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">5 methods,   5 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,27 +104,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.restapi.tests.TekarchAppTest_EndToEnd" hash-for-method="login">login</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.restapi.tests.TekarchAppTest_EndToEnd" hash-for-method="testAddUser">testAddUser</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.restapi.tests.TekarchAppTest_EndToEnd" hash-for-method="testDeleteUser">testDeleteUser</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.restapi.tests.TekarchAppTest_EndToEnd" hash-for-method="testGetAllUser">testGetAllUser</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.restapi.tests.TekarchAppTest_EndToEnd" hash-for-method="testUpdateUser">testUpdateUser</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.restapi.CRUD.testDeleteUser" hash-for-method="deleteUser_TC">deleteUser_TC</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -142,42 +122,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.restapi.tests.TekarchAppTest_EndToEnd</span>
+              <span class="class-name">com.restapi.CRUD.testDeleteUser</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="login">
-                  </a> <!-- login -->
-                  <span class="method-name">login</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="testAddUser">
-                  </a> <!-- testAddUser -->
-                  <span class="method-name">testAddUser</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="testDeleteUser">
-                  </a> <!-- testDeleteUser -->
-                  <span class="method-name">testDeleteUser</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="testGetAllUser">
-                  </a> <!-- testGetAllUser -->
-                  <span class="method-name">testGetAllUser</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="testUpdateUser">
-                  </a> <!-- testUpdateUser -->
-                  <span class="method-name">testUpdateUser</span>
+                  <a name="deleteUser_TC">
+                  </a> <!-- deleteUser_TC -->
+                  <span class="method-name">deleteUser_TC</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -185,7 +137,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/private/var/folders/_8/hjpgfp5n7j1c05ngvh0ntht80000gn/T/testng-eclipse-501987529/testng-customsuite.xml</span>
+            <span class="header-content">/private/var/folders/_8/hjpgfp5n7j1c05ngvh0ntht80000gn/T/testng-eclipse-2060317150/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -194,7 +146,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.restapi.tests.TekarchAppTest_EndToEnd&quot;/&gt;
+      &lt;class name=&quot;com.restapi.CRUD.testDeleteUser&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -234,32 +186,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(5);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'testAddUser')
-data.setCell(0, 2, 'com.restapi.tests.TekarchAppTest_EndToEnd')
-data.setCell(0, 3, 13133);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'testUpdateUser')
-data.setCell(1, 2, 'com.restapi.tests.TekarchAppTest_EndToEnd')
-data.setCell(1, 3, 8424);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'testGetAllUser')
-data.setCell(2, 2, 'com.restapi.tests.TekarchAppTest_EndToEnd')
-data.setCell(2, 3, 5941);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'testDeleteUser')
-data.setCell(3, 2, 'com.restapi.tests.TekarchAppTest_EndToEnd')
-data.setCell(3, 3, 2262);
-data.setCell(4, 0, 4)
-data.setCell(4, 1, 'login')
-data.setCell(4, 2, 'com.restapi.tests.TekarchAppTest_EndToEnd')
-data.setCell(4, 3, 2182);
+data.setCell(0, 1, 'deleteUser_TC')
+data.setCell(0, 2, 'com.restapi.CRUD.testDeleteUser')
+data.setCell(0, 3, 14852);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 31 seconds</span>
+              <span class="suite-total-time">Total running time: 14 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -285,30 +221,14 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.restapi.tests.TekarchAppTest_EndToEnd</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.restapi.CRUD.testDeleteUser</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">setUp</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">login</span>
-                <span class="method-start">340 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">testAddUser</span>
-                <span class="method-start">2526 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">testDeleteUser</span>
-                <span class="method-start">15662 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">testGetAllUser</span>
-                <span class="method-start">17925 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">testUpdateUser</span>
-                <span class="method-start">23867 ms</span>
+                <span class="method-name">deleteUser_TC</span>
+                <span class="method-start">381 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
