--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,16 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="947870">  <td>22/02/18 14:26:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TekarchAppTest_EndToEnd.testUpdateUser()[pri:1, instance:com.restapi.tests.TekarchAppTest_EndToEnd@2a556333]">testUpdateUser</td> 
-  <td>main@1896294051</td>   <td></td> </tr>
-<tr bgcolor="85bdee">  <td>22/02/18 14:26:11</td>   <td>-23862</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp()[pri:0, instance:com.restapi.tests.TekarchAppTest_EndToEnd@2a556333]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1896294051</td>   <td></td> </tr>
-<tr bgcolor="947870">  <td>22/02/18 14:26:27</td>   <td>-8205</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TekarchAppTest_EndToEnd.testDeleteUser()[pri:0, instance:com.restapi.tests.TekarchAppTest_EndToEnd@2a556333]">testDeleteUser</td> 
-  <td>main@1896294051</td>   <td></td> </tr>
-<tr bgcolor="947870">  <td>22/02/18 14:26:11</td>   <td>-23527</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TekarchAppTest_EndToEnd.login()[pri:0, instance:com.restapi.tests.TekarchAppTest_EndToEnd@2a556333]">login</td> 
-  <td>main@1896294051</td>   <td></td> </tr>
-<tr bgcolor="947870">  <td>22/02/18 14:26:29</td>   <td>-5942</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TekarchAppTest_EndToEnd.testGetAllUser()[pri:0, instance:com.restapi.tests.TekarchAppTest_EndToEnd@2a556333]">testGetAllUser</td> 
-  <td>main@1896294051</td>   <td></td> </tr>
-<tr bgcolor="947870">  <td>22/02/18 14:26:13</td>   <td>-21341</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TekarchAppTest_EndToEnd.testAddUser()[pri:0, instance:com.restapi.tests.TekarchAppTest_EndToEnd@2a556333]">testAddUser</td> 
-  <td>main@1896294051</td>   <td></td> </tr>
+<tr bgcolor="947870">  <td>22/02/18 16:22:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="testDeleteUser.deleteUser_TC()[pri:0, instance:com.restapi.CRUD.testDeleteUser@86be70a]">deleteUser_TC</td> 
+  <td>main@786041152</td>   <td></td> </tr>
+<tr bgcolor="85bdee">  <td>22/02/18 16:22:19</td>   <td>-375</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp()[pri:0, instance:com.restapi.CRUD.testDeleteUser@86be70a]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@786041152</td>   <td></td> </tr>
 </table>
